Register Gremlin-to-MATCH strategy and wire translator-first ordering
Make the Gremlin-to-MATCH translator live: g.V() / g.V(id) / g.V(ids)
now route through the MATCH planner in production. Registers the
strategy in the embedded graph's optimization chain and establishes
translator-first ordering by adding it to each half-measure strategy's
applyPrior() (create one on the graph-step folder, widen the count and
match folders). The registration-list position is informational; the
resolver sorts topologically.

Guard the graph-step folder against clobbering a translated traversal:
the boundary step extends GraphStep, so without an early return the
folder would wrap it back into a YTDBGraphStep and destroy the
translation. This was caught by the end-to-end smoke tests, which prove
a real g.V() holds exactly one boundary step after applyStrategies() --
the assertion that fails under the reversed ordering.

Add an explicit minimal-prefix (size-1) gate in the walker so the
recognized set is a single, greppable bound while Phase 1 covers only
the bare vertex source.

Add end-to-end smoke tests: translator-on-vs-off multiset parity,
timing/liveness, one-boundary-step engagement, duplicate-id and
follow-up-step and edge-start declines, polymorphic subclass coverage,
kill-switch round-trip, idempotency, and a query-metrics-under-
translation proof (querySummary round-trips, getQuery renders the
original Gremlin, exactly one QueryDetails, correct count). Full-suite
coverage report deferred to the track's final verification (the
origin/develop-scoped gate needs a full report; changed lines are
covered by the passing smoke/walker/strategy suites).